Added some documentation to recovery form files. Added remove recovery form.

--- a/public/Owner-Booking.html
+++ b/public/Owner-Booking.html
@@ -15,6 +15,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="manageClients.html">Manage Clients</a></li>
           <li><a href="manageAnimals.html">Manage Animals</a></li>
+          <li><a href="recoveryProgress.html">Recovery Progress</a></li>
           <li><a href="formMenu.html">Forms</a></li>
         </ul>
       </nav>
