--- a/public/ownerMenu.html
+++ b/public/ownerMenu.html
@@ -17,6 +17,7 @@
                     <li><a href="Owner-Booking.html">Appointments</a></li>
                     <li><a href="manageClients.html">Manage Clients</a></li>
                     <li><a href="manageAnimals.html">Manage Animals</a></li>
+                    <li><a href="adminViewRecoveryForm.html">Recovery Progress</a></li>
                     <li><a href="formMenu.html">Forms</a></li>
                 </ul>
             </nav>
