--- a/public/recoveryProgress.html
+++ b/public/recoveryProgress.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="recoveryProgress.css" />
     <link rel="icon" type="image/x-icon" href="./images/Sams_tp_logo.png">
 
-    <title>Recovery Form</title>
+    <title>Recovery Form Menu</title>
   </head>
   <body>
     <div class="menu-bar">
@@ -17,25 +17,20 @@
           <li><a href="appointmentBooking.html">Request Appointment</a></li>
           <li><a href="">View Animals</a></li>
           <li><a href="">View Appointment</a></li>
-          <li><a href="">Forms</a></li>
+          <li><a href="recoveryProgress.html">Recovery Progress</a></li>
         </ul>
       </nav>
     </div>
     <div class="menuContainer">
       <h1>Recovery Progress</h1>
       <div class="boxContainer" id="containerBox">
-        <button class="createForm" onclick="location.href = 'createRecoveryForm.html'">
+        <button class="createForm" onclick="location.href = 'addRecoveryForm.html'">
           Create Recovery Sheet</button
         ><br /><br />
+
         <button
-          class="editRecoveryForm"
-          onclick="location.href = 'editRemoveRecoveryForm.html'"
-        >
-          Edit/Remove Recovery Sheet</button
-        ><br /><br />
-        <button
-          class="viewRecoveryForm"
-          onclick="location.href = 'viewRecoveryForm.html'"
+          class="viewDeleteRecoveryForm"
+          onclick="location.href = 'viewDeleteRecoveryForm.html'"
         >
           View Recovery for Animal</button
         ><br /><br />
